# npm-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yaml  index.yaml
.github/workflows/: publish.yml
backend/: .gitignore  Cargo.toml  README.MD
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/domain/: Tokens.rs  mod.rs
backend/src/http/: mod.rs
backend/src/http/api/: api.rs  inner.rs  mod.rs  storage.rs
backend/src/http/auth/: api.rs  authenticator.rs  mod.rs  user.rs
backend/src/http/auth/token/: api.rs  cache.rs  mod.rs
charts/npm-proxy/: Chart.yaml  values.yaml
charts/npm-proxy/templates/: configmap.yaml  deployment.yaml  gateway.yaml  ingress.yaml  pvc.yaml  redis-service.yaml  redis.yaml  secret.yaml  service.yaml
frontend/: .npmrc  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx
frontend/src/App/: App.tsx
frontend/src/components/: AllPackagesLoader.tsx  ConfirmDeleteButton.tsx  LoginBoundary.tsx  RetryBoundary.tsx
frontend/src/components/Tree/: ConfirmDeleteButton.tsx  TreeNode.tsx
frontend/src/hook/: useFastDelete.tsx  useLoaded.ts
helm/templates/: deployment.yaml
src/: main.rs
src/http/: api.rs  auth.rs
src/http/api/: api.rs  error.rs  inner.rs  mod.rs
src/http/auth/: authenticator.rs  mod.rs
test/: package-lock.json  package.json
