[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
openidconnect = "4.0.1"
rand = "0.9.2"
redis = { version = "0.32.5", features = ["aio", "json", "tokio-comp"] }
redis-macros = { version = "0.5.6", features = ["json"] }
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde-binary = "0.5.0"
serde_json = "1.0.143"
simd-json = "0.15.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio_schedule = "0.3.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
